# Rendering-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  ImGuiConsoleLogWidget.cpp  comprehensive.vcxproj  comprehensive.vcxproj.filters  imgui.ini
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Editor/src/deferred-IBL-demo/: deferredIBL_demo.cpp  deferredIBL_demo.h
Editor/src/particle-demo/: ParticleDemo.cpp  ParticleDemo.h
Engine/: CMakeLists.txt  README.md  imgui.ini
Engine/Libraries/include/: pch.h
Engine/Libraries/include/glad/: glad.c
Engine/Libraries/include/glad/include/glad/: glad.h
Engine/Shaders/: areaLight.vert  atmospheric.frag  cubemap.frag  cubemap.vert  default-2.vert  default.geom  irradianceConvolution.frag  light.frag  model.frag  model.vert  shadowMap.vert  skeletonModel.frag  skeletonModel.vert  skybox.frag
Engine/Shaders/Bloom/: bloom.frag
Engine/Shaders/SSR/: SSR.vert  SSR_PBR.frag
Engine/Shaders/deferredIBL/: colorPass.frag  gPass.frag
Engine/Shaders/deferredShading/: deferredShadingView.frag  gBuffer.frag  gBuffer.vert  gBufferView.frag  gBufferView.vert  reflectionPlane.frag
Engine/Shaders/godRays/: blackScreen.frag  godRays.frag  godRays.vert
Engine/Shaders/skyAtmosphere/: atmosphere.frag  multipleScatteredLUT.frag  skyViewLUT.frag  transmittanceLUT.frag
Engine/Shaders/ssao/: blur.frag  ssao.frag  ssao_depth.frag
Engine/Textures/pbr/tight-weave-carpet-bl/: rename.py
Engine/assets/Shaders/: areaLight.frag  default-2.frag  default.frag  default.vert  light.vert  material.frag  material.vert  particle.frag  particle.vert
Engine/assets/Shaders/SSR/: SSR.frag
Engine/assets/Shaders/deferredIBL/: gPass.vert
Engine/assets/Shaders/deferredShading/: deferredShading.frag
Engine/assets/Shaders/godRays/: blackScreen.vert
Engine/assets/Shaders/postProcess/: renderQuad.frag
Engine/assets/Shaders/ssao/: ssao.vert
Engine/src/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h
Engine/src/core/: Engine.cpp  Engine.h
Engine/src/core/Systems/: System.cpp  System.h
Engine/src/core/components/: CameraComponent.cpp  CameraComponent.h  CubeMapComponent.cpp  CubeMapComponent.h  LightComponent.cpp  LightComponent.h  MComponent.h  ModelComponent.cpp  ModelComponent.h
Engine/src/core/entities/: Entity.cpp  Entity.h
Engine/src/core/events/: Event.h  EventListener.h  EventManager.cpp  EventManager.h
Engine/src/core/features/: Configs.h  EngineUtils.cpp  EngineUtils.h  Material.h  Mesh.h  Model.h  PlatformFactory.cpp  PlatformFactory.h  Profiler.cpp  ServiceLocator.h  Stream.cpp  Stream.h  Timer.cpp  Timer.h  camera.cpp
Engine/src/core/layers/: AppLayer.cpp  AppLayer.h  EditorLayer.cpp  EditorLayer.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h
Engine/src/core/materials/: Materials.h
Engine/src/core/resources/managers/: BufferManager.h  DescriptorManager.h  Manager.h  MaterialManager.h  MeshManager.cpp  MeshManager.h  MeshesManager.cpp  MeshesManager.h  ModelManager.cpp  ModelManager.h  ModelsManager.cpp  RendererManager.h  TextureManager.h
Engine/src/core/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Serializer.cpp  Serializer.h
Engine/src/graphics/: RenderDevice.h
Engine/src/graphics/framework/OpenGL/core/: Axis.h  BloomFBO.h  DepthCubeMap.h  EBO.cpp  MeshOpenGL.cpp  MeshOpenGL.h  ModelOpenGL.cpp  ModelOpenGL.h  ParticleGeometry.cpp  ParticleGeometry.h  ShaderOpenGL.cpp  ShaderOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h  VAO.cpp  VAO.h  VBO.cpp
Engine/src/graphics/framework/OpenGL/renderers/: AtmosphereRenderer.cpp  BloomRenderer.cpp  BloomRenderer.h  DeferredRenderer.cpp  ImageBasedRenderer.cpp  IndexBufferOpenGL.cpp  IndexBufferOpenGL.h  RenderDeviceOpenGL.cpp  RenderDeviceOpenGL.h  ShadowMapRenderer.cpp  SkyboxRenderer.cpp  VertexBufferOpenGL.cpp  VertexBufferOpenGL.h
Engine/src/graphics/framework/Vulkan/: RenderDeviceVulkan.cpp  RenderDeviceVulkan.h
Engine/src/graphics/framework/Vulkan/core/: VulkanBufferManager.cpp  VulkanBufferManager.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtils.cpp  VulkanUtils.h  WrapperStructs.h
Engine/src/graphics/framework/Vulkan/renderers/: RenderDeviceVulkan.cpp  RenderDeviceVulkan.h  RendererVulkan.cpp  RendererVulkan.h
Engine/src/graphics/framework/Vulkan/renderpasses/: VulkanRenderPass.h
Engine/src/graphics/renderers/: AtmosphereRenderer.h  Buffer.h  ImageBasedRenderer.h  RenderDevice.h  Renderer.h  ShadowMapRenderer.h  SkyboxRenderer.h  UniformBuffer.h  VertexBuffer.h
Engine/src/graphics/renderpasses/: BloomLayer.cpp  BloomPass.h  RenderPass.h  SSAOLayer.cpp  SSRLayer.cpp  SSRLayer.h
Engine/src/graphics/utils/: Utils.cpp  Utils.h  ltc_matrix.h
Engine/src/gui/: GuiManager.h
Engine/src/gui/Themes/: Themes.h
Engine/src/gui/framework/ImGui/: ImGuiManager.cpp  ImGuiManager.h
Engine/src/gui/framework/ImGui/theme/: ImGuiThemes.cpp
Engine/src/gui/framework/ImGui/widgets/: ImGuiConsoleLogWidget.cpp  ImGuiConsoleLogWidget.h  ImGuiEntityControlWidget.h  ImGuiLeftSidebarWidget.cpp  ImGuiLeftSidebarWidget.h  ImGuiLogger.h  ImGuiMainViewWidget.h  (+6 more)
Engine/src/gui/widgets/: ConsoleLogWidget.h  EntityControlWidget.h  LeftSidebarWidget.h  MainViewWidget.h  SubViewWidget.h  Widget.h
Engine/src/logging/: Logger.h
Engine/src/logging/framework/: LoggerSpd.h
Engine/src/services/: Service.cpp  Service.h
Engine/src/window/: AppWindow.cpp  AppWindow.h  Input.h  InputKeyCode.h
Engine/src/window/platform/GLFW/: AppWindowGLFW.cpp  AppWindowGLFW.h  InputGLFW.cpp  InputGLFW.h
Sandbox/: CMakeLists.txt
Sandbox/assets/data/: Level1-test.json  Level1.json
Sandbox/assets/data/Prefabs/: asteroid.json  player.json
Sandbox/assets/shaders/: default.frag  default.vert
Sandbox/src/: Sandbox.cpp  Sandbox.h  SandboxLayer.cpp  SandboxLayer.h  VulkanApplication.cpp  VulkanApplication.h  main.cpp
Sandbox/src/shaders/: compile.bat  default.frag
(+286 files in other folders)
